--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ Author URL: http://w3layouts.com
 
   <!-- Template CSS -->
   <link rel="stylesheet" href="assets/css/style-starter.css">
+  <link rel="icon" type="img/x-icon" href="https://avatars.githubusercontent.com/u/116737030?s=40&v=4">
 </head>
 
 <body>
