--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Author URL: http://w3layouts.com
             <div class="col-lg-6 col-sm-12 mt-lg-0 mt-4">
                 <span class="title-small">Hello</span>
                 <h1 class="mb-2 title"> <span>I'm</span> Abdul Majidkambarath</h1>
-                <p> I'm Majid <br> And Completed +2 in 2021 that my qualification and i'm studying in calicut a programming course @brototype .</p>
+                <p><br>My Qualification is higher secondary Completed in 2021 and i'm studying in MERN Stack developer programming course @brototype in calicut .</p>
                 <div class="mt-sm-5 mt-4">
                     <a class="btn btn-primary btn-style mr-2" href="contact.html"> Hire Me </a>
                     <a class="btn btn-outline-primary btn-style mr-2" href="#portfolio"> Portfolio </a>
@@ -193,7 +193,7 @@ Author URL: http://w3layouts.com
                                     <div class="test-img"><img src="assets/images/chavu (2).jfif" class="img-fluid" alt="client-img">
                                     </div>
                                     <div class="peopl align-self">
-                                        <h3>Shahul hameed/h3>
+                                        <h3>Shahul hameed>
                                         <p class="indentity"> Gammer</p>
                                     </div>
                                 </div>
@@ -211,7 +211,7 @@ Author URL: http://w3layouts.com
                                     </div>
                                     <div class="peopl align-self">
                                         <h3>Muhammed faseen cm</h3>
-                                        <p class="indentity">fluter developer</p>
+                                        <p class="indentity">flutter developer</p>
                                     </div>
                                 </div>
                             </div>
@@ -255,14 +255,14 @@ Author URL: http://w3layouts.com
                         <div class="testimonial-content">
                             <div class="testimonial">
                                 <blockquote>
-                                    <q>shaheem shon 20 years old is fluter developer </q>
+                                    <q>shaheem shon 20 years old is flutter developer </q>
                                 </blockquote>
                                 <div class="testi-des">
                                     <div class="test-img"><img src="assets/images/shon (2).jfif" class="img-fluid" alt="client-img">
                                     </div>
                                     <div class="peopl align-self">
                                         <h3>shaheem shon</h3>
-                                        <p class="indentity">fluter developer</p>
+                                        <p class="indentity">flutter developer</p>
                                     </div>
                                 </div>
                             </div>
