--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,3 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
--->
 <!doctype html>
 <html lang="en">
 
@@ -118,7 +114,7 @@ Author URL: http://w3layouts.com
                         </div>
                         <div class="cont-right">
                             <h6>Location</h6>
-                            <p>Address here, Malappuram kodur 676504.</p>
+                            <p>Address here, Malappuram Town, kodur (676504).</p>
                         </div>
                     </div>
                 </div>
